# MarkTheCrab

./: .gitignore  Cargo.toml  README.md  SHOWCASE.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/markdown-core/: Cargo.toml
crates/markdown-core/src/: credits.rs  export.rs  lib.rs  render.rs  themes.rs
crates/wasm-bindings/: Cargo.toml
crates/wasm-bindings/src/: lib.rs
scripts/: build-mascot.mjs  build-wasm.mjs  copy-vendor.js  gen-icon.py
src/: app.js  editor.js  hljs-setup.js  index.html  mascot.js  runtime.js  spellcheck.js  util.js  util.test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  markdown.rs  menu.rs  settings.rs
src/styles/: app.css  tabbar.css  toolbar.css
src/themes/: dark.css  foghorn.css  github.css  handwriting.css  markdown.css  metro-vibes-dark.css  metro-vibes.css  modern.css  solarized-dark.css  solarized-light.css
