[package]
name = "markthecrab"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
pulldown-cmark = { version = "0.12", features = ["simd"] }
ammonia = "4"
regex-lite = "0.1"
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
