[package]
name = "markthecrab"
version = "0.2.7"
edition = "2024"

# The app logic lives in a library so mobile targets (iOS/Android) can link
# it as their entry point. Desktop builds link the same lib from main.rs.
# staticlib -> iOS, cdylib -> Android, rlib -> the desktop binary.
[lib]
name = "markthecrab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
markdown-core = { path = "../crates/markdown-core", features = ["simd"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
